Added output onto the screen

--- a/app/views/prime/index.html
+++ b/app/views/prime/index.html
@@ -6,7 +6,7 @@
         <input id="gridSize" type="number" min="1" step="1"/>
         <button id="calculateBtn" type="button">Calculate</button>
     </div>
-    <div id="gridResponse">
+    <div id="gridResponse" style="overflow-x:scroll;overflow-y:scroll">
 
     </div>
 </div>
