--- a/app/assets/stylesheets/prime.scss
+++ b/app/assets/stylesheets/prime.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Prime controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.table-container{
+  max-height:(100vh - 5);
+  max-width: 100vw;
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
+.table {
+  width:100%;
+  height:100%;
+}
+
+.table td {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+
