--- a/app/views/prime/index.html
+++ b/app/views/prime/index.html
@@ -6,8 +6,12 @@
         <input id="gridSize" type="number" min="1" step="1"/>
         <button id="calculateBtn" type="button">Calculate</button>
     </div>
-    <div id="gridResponse" style="overflow-x:scroll;overflow-y:scroll">
+    <div class="table-container">
+        <table class="table" style="width:100%;height:100%">
+            <tbody id="gridResponse">
 
+            </tbody>
+        </table>
     </div>
 </div>
 <script>
